--- a/package.json
+++ b/package.json
@@ -5,11 +5,37 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
+    "immer": "^7.0.9",
+    "konva": "^7.1.3",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-konva": "^16.13.0-6",
+    "react-textarea-autosize": "^8.2.0",
+    "styled-components": "^5.2.0",
+    "use-image": "^1.0.6",
+    "window": "^4.2.7",
+    "xstate": "^4.13.0",
+    "zustand": "^3.1.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-essentials": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/react": "^6.0.26",
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.50",
+    "babel-loader": "^8.1.0",
+    "react-is": "^16.13.1",
+    "typescript": "^4.0.3"
   }
 }
