--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.50",
     "babel-loader": "^8.1.0",
+    "chromatic": "^5.2.0",
     "react-is": "^16.13.1",
     "typescript": "^4.0.3"
   }
